# ifdnfc

./: .gitignore  ChangeLog  Makefile.am  README  README.md  configure.ac
bitbake/: ifdnfc_0.1.1.bb  ifdnfc_0.1.2.bb  ifdnfc_0.1.bb  libnfc_1.3.4.bb
src/: Info.plist  Info.plist.in  Makefile.am  atr.c  atr.h  ifd-nfc.c  ifd-nfc.h  ifdnfc-activate.c  reader.conf.in
